--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "laravel/ui": "^4.6",
-        "maatwebsite/excel": "3.1.*"
+        "maatwebsite/excel": "3.1.*",
+        "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.5",
