--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
+        "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/vite": "^4.1.3",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.8.2",
         "bootstrap": "^5.2.3",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
+        "postcss": "^8.5.3",
         "sass": "^1.56.1",
-        "tailwindcss": "^4.1.3",
+        "tailwindcss": "^4.1.7",
         "vite": "^6.0.11"
     },
     "dependencies": {
